<resources>
    <string name="app_name">MoreCast</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="speed">Speed: </string>
    <string name="direction">Direction: </string>
    <string name="precipitation">Precipitation</string>
    <string name="location">Choose Location</string>
    <string name="home">Home</string>
    <string name="noData">No data has been gathered yet! Try using the app again
        when you have an internet connection.</string>
    <string name="locationsUnavailable">There is no internet connection. Please
        access the internet to use location features.</string>
    <string name="googleSearchError">There was a problem searching the Google API.</string>
    <string name="googlePickerError">There was a problem access the Google Place Picker</string>
    <string name="locationsTextError">Could not load the default locations.
        Please try again soon!</string>
    <string name="emptyAPIError">Weather data could not be retrieved!</string>
    <string name="errorTitle">Application Error</string>
    <string name="actionLocation">Current Location</string>
    <string name="actionPicker">Location Picker</string>
    <string name="networkError">This feature is unavailable without internet.</string>
    <string name="pressureUnits">%.2f hPa</string>
    <string name="humidityUnits">%d%%</string>
    <string name="windSpeedUnits">%.2f m/s</string>
    <string name="windDirectionUnits">%.2f degrees</string>
    <string name="precipAmountUnits">%.2f mm, (3h)</string>
    <string name="temperatureUnits">%.1f °C</string>
    <string name="temperatureUnit">°C</string>
</resources>
